hphp/hack/test/typecheck/new_inference/recursive_type_union.php.like_types.exp
File "recursive_type_union.php", line 7, characters 10-14:
Invalid return type (Typing[4110])
File "collections/Vector.hhi", line 48, characters 20-21:
Some type constraint(s) are violated here
File "collections/Vector.hhi", line 48, characters 20-21:
Tv is a constrained type parameter
File "recursive_type_union.php", line 3, characters 26-28:
Expected int
File "collections/Vector.hhi", line 48, characters 20-21:
But got dynamic
